fix zoom on mobile

--- a/index.css
+++ b/index.css
@@ -9,6 +9,11 @@ html, body {
     background-color: #7B8CDE;
  }
 
+ :root {
+    touch-action: pan-x pan-y;
+    height: 100% 
+  }
+
 #keyboard {
     height: 50%;
     width: 100%;
